--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "tsx watch src/server.ts",
+    "build": "tsc &&  node dist/server.js",
+    "lint": "eslint"
   },
   "keywords": [],
   "author": "",
@@ -23,5 +25,8 @@
     "tsx": "^4.19.2",
     "typescript": "^5.6.3",
     "typescript-eslint": "^8.13.0"
+  },
+  "dependencies": {
+    "express": "^4.21.1"
   }
 }
