--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@tsconfig/node20": "^20.1.4",
     "@types/eslint-config-prettier": "^6.11.3",
     "@types/eslint__js": "^8.42.3",
-    "@types/express": "^5.0.0",
+    "@types/express": "^4.17.21",
     "eslint": "^9.14.0",
     "eslint-config-prettier": "^9.1.0",
     "globals": "^15.12.0",
@@ -27,6 +27,7 @@
     "typescript-eslint": "^8.13.0"
   },
   "dependencies": {
-    "express": "^4.21.1"
+    "dotenv": "^16.4.5",
+    "express": "^4.21.0"
   }
 }
